# mermaid-ascii

./: .gitignore  Makefile
.github/workflows/: publish.yml  python-test.yaml  sync-upstream.yaml
cmd/: diagram.go  draw.go  fit_graph.go  graph.go  label.go  mapping_edge.go  mapping_node.go  parse.go  parse_test.go  render_graph_test.go  root.go
pkg/diagram/: config.go
pkg/sequence/: renderer.go  renderer_test.go
python/: pyproject.toml
python/scripts/: binary.ps1  binary.py  binary.sh
